--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@
     background-color: #333;
     overflow: hidden;
 }
+#hi{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
 .topnav p {
     float: left;
     color: red;
@@ -51,4 +57,9 @@ button{
 h1{
   text-align: center;
   color: red;
+}
+.all{
+  padding: 10px;
+  margin: 20px;
+  background-color: bisque;
 }
